# skl

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: open-questions.md  plan.md
docs/analysis/: skills-spec.md
docs/decisions/: D-007-three-tier-values.md  D-008-secrets-separation.md  D-009-multi-repo-architecture.md  D-010-toolkit-identity.md  D-011-shared-kit-fetched.md  README.md  SKL-001-drift-is-warning.md  SKL-002-unimplemented-flags-error.md  SKL-003-global-compatibility-guard.md  SKL-004-master-skill-md-posture.md  SKL-005-defer-handoff-modelling.md  SKL-006-strip-skl-block-on-skills-native-compile.md  SKL-007-vscode-emit-skill-and-custom-agent.md  SKL-008-persona-defaults-skills-format-refresh.md  SKL-009-m365-schema-versioning.md  SKL-010-compat-guard-edge-cases.md
docs/spec/: README.md  cli.md  compilation.md  infrastructure.md  manifest.md  skill-md.md  values-and-secrets.md
src/skl/: __init__.py  __main__.py  budget.py  cli.py  index.py  init.py  lint.py  manifest.py  shared.py  sidecars.py  skill_md.py  validate.py
src/skl/compile/: __init__.py  _transforms.py  budget.py  copilot_studio.py  ir.py  m365.py  provenance.py  skills_native.py  vscode.py
src/skl/schemas/: __init__.py  skill-repo.schema.json  skill.frontmatter.schema.json
src/skl/templates/: __init__.py  standalone-skill.md
src/skl/templates/sidecars/: copilot-studio.yaml  m365.yaml  vscode.yaml
tests/: test_budget.py  test_cli.py  test_compat_guard.py  test_compile_cli.py  test_compile_copilot_studio.py  test_compile_m365.py  test_compile_skills_native.py  test_compile_vscode.py  test_index.py  test_init.py  test_lint.py  test_manifest.py  test_schemas.py  test_shared.py  test_sidecars.py  test_skill_md.py  test_validate.py
